<resources>
    <string name="app_name">Crud</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="menu_preferencias">Configuración</string>
    <string name="menu_crear">Nuevo</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_visualizar">Ver</string>
    <string name="title_activity_tiradas_formulario">Tiradas Formulario</string>
    <string name="label_nombre_personaje">Nombre:</string>
    <string name="label_raza">Raza:</string>
    <string name="label_observaciones">Observaciones:</string>
    <string name="label_dead">Muerto:</string>
    <string name="label_clase">Clase</string>
    <string name="label_condiciones">Condiciones:</string>

    <string name="boton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>

    <string name="personaje_crear_titulo">Nuevo Personaje</string>
    <string name="personaje_crear_confirmacion">Personaje creado</string>

    <string name="personaje_eliminar_titulo">Eliminar Personaje</string>
    <string name="personaje_eliminar_mensaje">¿Seguro que desea eliminar el personaje?</string>
    <string name="personaje_eliminar_confirmacion">Personaje eliminado</string>

    <string name="personaje_editar_titulo">Editar Personaje</string>
    <string name="personaje_editar_confirmacion">Personaje modificado</string>
</resources>
