<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonajeFormulario" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_personaje"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_nombre"
            android:ems="10" />

        <TextView
            android:id="@+id/label_raza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_raza"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/nombre"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/raza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_raza"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <TextView
            android:id="@+id/label_observaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_observaciones"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/raza"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/observaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label_observaciones"
            android:ems="10"
            android:inputType="textMultiLine">
        </EditText>

        <TextView
            android:id="@+id/label_clase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_clase"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/observaciones"
            android:layout_marginTop="20dp" />

        <Spinner
            android:id="@+id/clase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_clase"
            android:ems="10"/>

        <TextView
            android:id="@+id/label_descripcionclase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_condiciones"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/clase"
            android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/dead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/observaciones"
            android:layout_below="@+id/label_descripcionclase"
            android:layout_marginTop="20dp"
            android:text="@string/label_dead" />

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dead"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_cancelar" />

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_guardar" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
